--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -42,3 +42,10 @@ VALIDATORS=0x
 #for bridge native_to_erc, erc_to_erc mode
 DEPLOY_REWARDABLE_TOKEN=false
 DPOS_STAKING_ADDRESS=
+
+#Whitelisting for consortium bridge feature
+#Set to true if fee will deploy a Border contract with a whitelist
+BORDER_ACTIVE=false
+BORDER_CONTRACT_OWNER=0x
+#E.g. INITIAL_CITIZEN_ACCOUNTS=0x 0x 0x
+INITIAL_CITIZEN_ACCOUNTS=0x
